testsuite/tests/typecheck/should_fail/T14618.stderr

T14618.hs:6:14: error:
    • Couldn't match type ‘a’ with ‘b’
      ‘a’ is a rigid type variable bound by
        the type signature for:
          safeCoerce :: forall a b. a -> b
        at T14618.hs:5:1-20
      ‘b’ is a rigid type variable bound by
        the type signature for:
          safeCoerce :: forall a b. a -> b
        at T14618.hs:5:1-20
      Expected type: a -> b
        Actual type: b -> b
    • In the expression: f'
      In an equation for ‘safeCoerce’:
          safeCoerce
            = f'
            where
                f :: d -> forall c. d
                f x = x
                f' = f
    • Relevant bindings include
        safeCoerce :: a -> b (bound at T14618.hs:6:1)
